fix: button with icon alignment

--- a/src/govie/components/button/_index.scss
+++ b/src/govie/components/button/_index.scss
@@ -258,6 +258,8 @@ $govie-button-text-colour: govie-colour('white') !default;
   .govie-button--icon {
     min-height: auto;
     justify-content: center;
+    display: inline-flex;
+    align-items: center;
   }
 
   .govie-button__icon-right,
